# decoTls12MtE

./: Dockerfile  README.md  config.yml  install.sh
2pc/: .gitignore  README.md  install.sh
2pc/ag_test/: CMakeLists.txt
2pc/sh_test/: CMakeLists.txt
2pc/sh_test/test/: CMakeLists.txt  hmac_outer_hash.cpp  hmac_outer_hash_2.cpp  hmac_setup.cpp  prf.cpp  prf_client_finished.cpp  prf_server_finished.cpp  test_util.h
app/: cert.sh
app/cert-conf/: ca.conf  server.conf  verifier.conf
app/certs/: ca.crt  ca.csr  ca.key  ca.srl  server.csr  server.key  server.pem  verifier.csr  verifier.key  verifier.pem
app/prover/: go.mod  prover.go
app/server/: go.mod  server.go
app/verifier/: go.mod  verifier.go
jsnark/: .gitignore
jsnark/JsnarkCircuitBuilder/src/examples/gadgets/comparator/: JSONFloatThresholdComparatorGadget.java
jsnark/gcmauthtag/: gcmauthtag.go  gcmauthtag_test.go
jsnark/libsnark/libsnark/: CMakeLists.txt
jsnark/libsnark/libsnark/jsnark_interface/: run_verify.cpp
src/: go.mod  go.sum
src/crypto/tls/: ECtF.go  ECtF_test.go  auth.go  cipher_suites.go  common.go  conn.go  conn_test.go  context_integrity.go  crypto_util.go  debug_utils.go  env_config.go  example_test.go  handshake_client.go  handshake_client_test.go  handshake_client_tls13.go  handshake_messages.go  handshake_server.go  handshake_server_test.go  handshake_server_tls13.go  handshake_test.go  key_agreement.go  key_schedule.go  prf.go  prover.go  prover_verifier_communication.go  prover_verifier_message.go  tls.go  tls_test.go  two_party_computation.go  verifier.go
(+9 files in other folders)
